--- a/Client/Styles/Buttons.axaml
+++ b/Client/Styles/Buttons.axaml
@@ -36,7 +36,7 @@
    <Style Selector="Button">
       <Setter Property="CornerRadius" Value="6.0" />
       <Setter Property="Padding" Value="8.0" />
-      <Setter Property="Margin" Value="4.0" />
+      <Setter Property="Margin" Value="0.0 4.0" />
       <Setter Property="Background" Value="{DynamicResource Selection}" />
       <Setter Property="BorderBrush" Value="Transparent" />
       <Setter Property="Cursor" Value="Hand" />
