--- a/Client/App.axaml
+++ b/Client/App.axaml
@@ -14,6 +14,8 @@
    <Application.Styles>
       <SimpleTheme />
       <StyleInclude Source="/View/Controls/Icon.axaml" />
+      <StyleInclude Source="/View/Controls/IconText.axaml" />
       <StyleInclude Source="/Styles/Buttons.axaml" />
+      <StyleInclude Source="/Styles/TextBlocks.axaml" />
    </Application.Styles>
 </Application>
