--- a/Client/View/Content/Settings/SettingsAccountPanel.axaml
+++ b/Client/View/Content/Settings/SettingsAccountPanel.axaml
@@ -2,112 +2,111 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:view="clr-namespace:Client.View.Content"
                   xmlns:vm="clr-namespace:Client.ViewModel.Content"
-                  xmlns:controls="clr-namespace:Client.View.Controls"
                   x:Class="Client.View.Content.SettingsAccountPanel">
    <Design.DataContext>
       <vm:SettingsAccountViewModel />
    </Design.DataContext>
 
-   <view:ContentBase.Resources>
-      <controls:IconText
-         x:Key="Content.Invite"
-         Text="Invite Friends"
-         Icon="{StaticResource Icon.Send-Plane}"
-         Foreground="{DynamicResource Blue}" />
-      <controls:IconText
-         x:Key="Content.Request"
-         Text="Request Data"
-         Icon="{StaticResource Icon.Database}"
-         Foreground="{DynamicResource White}" />
-      <controls:IconText
-         x:Key="Content.Switch"
-         Text="Switch Account"
-         Icon="{StaticResource Icon.Arrow-Left-Right}"
-         Foreground="{DynamicResource White}" />
-      <controls:IconText
-         x:Key="Content.Logout"
-         Text="Log out"
-         Icon="{StaticResource Icon.Logout-Box}"
-         Foreground="{DynamicResource Red}" />
-      <controls:IconText
-         x:Key="Content.Delete"
-         Text="Delete Account"
-         Icon="{StaticResource Icon.Delete-Bin}"
-         Foreground="{DynamicResource Red}" />
-   </view:ContentBase.Resources>
+   <!-- <view:ContentBase.Resources> -->
+   <!--    <controls:IconText -->
+   <!--       x:Key="Content.Invite" -->
+   <!--       Text="Invite Friends" -->
+   <!--       Source="{StaticResource Icon.Send-Plane}" -->
+   <!--       Foreground="{DynamicResource Blue}" /> -->
+   <!--    <controls:IconText -->
+   <!--       x:Key="Content.Request" -->
+   <!--       Text="Request Data" -->
+   <!--       Source="{StaticResource Icon.Database}" -->
+   <!--       Foreground="{DynamicResource White}" /> -->
+   <!--    <controls:IconText -->
+   <!--       x:Key="Content.Switch" -->
+   <!--       Text="Switch Account" -->
+   <!--       Source="{StaticResource Icon.Arrow-Left-Right}" -->
+   <!--       Foreground="{DynamicResource White}" /> -->
+   <!--    <controls:IconText -->
+   <!--       x:Key="Content.Logout" -->
+   <!--       Text="Log out" -->
+   <!--       Source="{StaticResource Icon.Logout-Box}" -->
+   <!--       Foreground="{DynamicResource Red}" /> -->
+   <!--    <controls:IconText -->
+   <!--       x:Key="Content.Delete" -->
+   <!--       Text="Delete Account" -->
+   <!--       Source="{StaticResource Icon.Delete-Bin}" -->
+   <!--       Foreground="{DynamicResource Red}" /> -->
+   <!-- </view:ContentBase.Resources> -->
 
-   <Grid ColumnDefinitions="*,23,220"
-         RowDefinitions="*">
-      <StackPanel
-         Grid.Column="0"
-         Orientation="Vertical"
-         Spacing="10.0"
-         VerticalAlignment="Center"
-         HorizontalAlignment="Center">
-
-         <!-- <Image -->
-         <!--    Source="{SvgImage /Assets/Settings/Account.svg}" -->
-         <!--    Width="128.0" Height="128.0" /> -->
-         <TextBlock
-            Text="Username"
-            TextAlignment="Center"
-            FontSize="32.0"
-            Classes="Bold" />
-         <TextBox
-            Width="200.0" Height="100.0"
-            AcceptsReturn="True"
-            AcceptsTab="False"
-            BorderBrush="{DynamicResource Gray}"
-            SelectionBrush="{DynamicResource Gray}"
-            BorderThickness="3.0"
-            Watermark="About you..."
-            Foreground="{DynamicResource Gray}"
-            Background="{DynamicResource Dark}"
-            FontSize="24.0"
-            CornerRadius="10.0" />
-      </StackPanel>
-
-      <Border
-         Grid.Column="1"
-         Background="{DynamicResource Light}"
-         VerticalAlignment="Stretch"
-         HorizontalAlignment="Center"
-         CornerRadius="1.5"
-         Width="3" />
-
-      <ScrollViewer
-         Grid.Column="2"
-         Padding="10.0"
-         HorizontalScrollBarVisibility="Disabled"
-         VerticalScrollBarVisibility="Auto">
-         <StackPanel Orientation="Vertical">
-            <TextBlock
-               Text="Manage Account"
-               Classes="Title Bold" />
-            <Button
-               Classes="Bordered"
-               Content="{StaticResource Content.Invite}"
-               Command="{Binding Button_OnInvite}" />
-            <Button
-               Classes="Bordered"
-               Content="{StaticResource Content.Request}"
-               Command="{Binding Button_OnRequest}" />
-            <Button
-               Classes="Bordered"
-               Content="{StaticResource Content.Switch}"
-               Command="{Binding Button_OnSwitch}" />
-            <TextBlock
-               Text="Red line"
-               Classes="Title Bold" />
-            <Button
-               Classes="Bordered"
-               Content="{StaticResource Content.Logout}"
-               Command="{Binding Button_OnLogout}" />
-            <Button
-               Classes="Bordered"
-               Content="{StaticResource Content.Delete}"
-               Command="{Binding Button_OnDelete}" />
-         </StackPanel>
-      </ScrollViewer>
-   </Grid>
+   <!-- <Grid ColumnDefinitions="*,23,220" -->
+   <!--       RowDefinitions="*"> -->
+   <!--    <StackPanel -->
+   <!--       Grid.Column="0" -->
+   <!--       Orientation="Vertical" -->
+   <!--       Spacing="10.0" -->
+   <!--       VerticalAlignment="Center" -->
+   <!--       HorizontalAlignment="Center"> -->
+   <!-- -->
+   <!--       ~1~ <Image @1@ -->
+   <!--       ~1~    Source="{SvgImage /Assets/Settings/Account.svg}" @1@ -->
+   <!--       ~1~    Width="128.0" Height="128.0" /> @1@ -->
+   <!--       <TextBlock -->
+   <!--          Text="Username" -->
+   <!--          TextAlignment="Center" -->
+   <!--          FontSize="32.0" -->
+   <!--          Classes="Bold" /> -->
+   <!--       <TextBox -->
+   <!--          Width="200.0" Height="100.0" -->
+   <!--          AcceptsReturn="True" -->
+   <!--          AcceptsTab="False" -->
+   <!--          BorderBrush="{DynamicResource Gray}" -->
+   <!--          SelectionBrush="{DynamicResource Gray}" -->
+   <!--          BorderThickness="3.0" -->
+   <!--          Watermark="About you..." -->
+   <!--          Foreground="{DynamicResource Gray}" -->
+   <!--          Background="{DynamicResource Dark}" -->
+   <!--          FontSize="24.0" -->
+   <!--          CornerRadius="10.0" /> -->
+   <!--    </StackPanel> -->
+   <!-- -->
+   <!--    <Border -->
+   <!--       Grid.Column="1" -->
+   <!--       Background="{DynamicResource Light}" -->
+   <!--       VerticalAlignment="Stretch" -->
+   <!--       HorizontalAlignment="Center" -->
+   <!--       CornerRadius="1.5" -->
+   <!--       Width="3" /> -->
+   <!-- -->
+   <!--    <ScrollViewer -->
+   <!--       Grid.Column="2" -->
+   <!--       Padding="10.0" -->
+   <!--       HorizontalScrollBarVisibility="Disabled" -->
+   <!--       VerticalScrollBarVisibility="Auto"> -->
+   <!--       <StackPanel Orientation="Vertical"> -->
+   <!--          <TextBlock -->
+   <!--             Text="Manage Account" -->
+   <!--             Classes="Title Bold" /> -->
+   <!--          <Button -->
+   <!--             Classes="Bordered" -->
+   <!--             Content="{StaticResource Content.Invite}" -->
+   <!--             Command="{Binding Button_OnInvite}" /> -->
+   <!--          <Button -->
+   <!--             Classes="Bordered" -->
+   <!--             Content="{StaticResource Content.Request}" -->
+   <!--             Command="{Binding Button_OnRequest}" /> -->
+   <!--          <Button -->
+   <!--             Classes="Bordered" -->
+   <!--             Content="{StaticResource Content.Switch}" -->
+   <!--             Command="{Binding Button_OnSwitch}" /> -->
+   <!--          <TextBlock -->
+   <!--             Text="Red line" -->
+   <!--             Classes="Title Bold" /> -->
+   <!--          <Button -->
+   <!--             Classes="Bordered" -->
+   <!--             Content="{StaticResource Content.Logout}" -->
+   <!--             Command="{Binding Button_OnLogout}" /> -->
+   <!--          <Button -->
+   <!--             Classes="Bordered" -->
+   <!--             Content="{StaticResource Content.Delete}" -->
+   <!--             Command="{Binding Button_OnDelete}" /> -->
+   <!--       </StackPanel> -->
+   <!--    </ScrollViewer> -->
+   <!-- </Grid> -->
 </view:ContentBase>
